# latxaudio

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-build.sh  run.sh  system-prompt.example.md
scripts/: download-models.sh  download-piper-voice.sh
src/: audio.rs  chat.rs  llm.rs  main.rs  stt.rs  tts.rs
